--- a/studySpot/map2.html
+++ b/studySpot/map2.html
@@ -3,18 +3,20 @@
    <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>StudySpot</title>
+        <title>Map Page</title>
         <!--REMOVED FROM ORIGINAL<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />-->
 
         <!--ADDED-->
         
         
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
         <!--END OF ADDED CONTENT -->
 
         <!--ADDED-->
         <link rel="stylesheet" type="text/css" href="mapStyle.css" />
         <link rel="stylesheet" type="text/css" href="myStyle.css" />
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+        <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700,100' rel='stylesheet' type='text/css'>
         <!--END OF ADDED CONTENT-->
 
@@ -141,7 +143,7 @@ $("#addFav2").click(function(){
             <h3 class="title"> Leaky Beaker, 1st floor</h3>
         </div>
 
-        <div id="pathDir">
+<div id="pathDir">
                 <div id="mapResults">                  
                     <div id="directions"></div>
 
