--- a/studySpot/map2.html
+++ b/studySpot/map2.html
@@ -3,7 +3,7 @@
    <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Map Page</title>
+        <title>StudySpot</title>
         <!--REMOVED FROM ORIGINAL<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />-->
 
         <!--ADDED-->
@@ -16,7 +16,6 @@
         <link rel="stylesheet" type="text/css" href="mapStyle.css" />
         <link rel="stylesheet" type="text/css" href="myStyle.css" />
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-        <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700,100' rel='stylesheet' type='text/css'>
         <!--END OF ADDED CONTENT-->
 
@@ -143,7 +142,7 @@ $("#addFav2").click(function(){
             <h3 class="title"> Leaky Beaker, 1st floor</h3>
         </div>
 
-<div id="pathDir">
+        <div id="pathDir">
                 <div id="mapResults">                  
                     <div id="directions"></div>
 
