--- a/studySpot/map2.html
+++ b/studySpot/map2.html
@@ -150,3 +150,5 @@ $("#addFav2").click(function(){
             </div>
             </div> <!--content-->
         </div> <!--page--> 
+</body>
+</html>
