--- a/studySpot/index1.html
+++ b/studySpot/index1.html
@@ -122,14 +122,15 @@
 
 <body>
   <!-- Start of first page -->
+  <!-- Start of first page -->
   <div data-role="page" id="home" data-theme="a">
 
    <div id="header">
     <h1 id ="appTitle" class = "title">StudySpot</h1>
     <a href="#favoritesPage2" data-transition="slide"><div id="heartDiv">
       <img id = "heartIcon" src = "heartIconD.png">
-  </div>
-</a>
+    </div>
+  </a>
 
 </div>
 
@@ -146,20 +147,20 @@
      </span>
      <h3 class = "title">
       Study area
-  </h3>
+    </h3>
 
-</div>
-<div class="option">
+  </div>
+  <div class="option">
    <span class="icon-iconFilters-14"></span>
    <h3 class = "title">
     Lounge
-</h3>
+  </h3>
 </div>
 <div class="option">
   <span class="icon-iconFilters-15"></span>
   <h3 class = "title">
     Cafe
-</h3>
+  </h3>
 </div>
 <div class="option">
  <span class="icon-iconFilters-16"></span>
@@ -173,7 +174,7 @@
   <span class="icon-iconFilters-17"></span>
   <h3 class = "title">
     Classroom
-</h3>
+  </h3>
 </div>
 <div class="option">
  <span class="icon-iconFilters-18"></span>
@@ -194,21 +195,21 @@
    <span class="icon-iconFilters-19"></span>
    <h3 class = "title">
      Silent
- </h3>
-</div>
+   </h3>
+ </div>
 
 
-<div class="noiseOption">
+ <div class="noiseOption">
   <span class="icon-iconFilters-20"></span>
   <h3 class = "title">
     Low
-</h3>
+  </h3>
 </div>
 <div class="noiseOption">
   <span class="icon-iconFilters-21"></span>
   <h3 class = "title">
     Social
-</h3>
+  </h3>
 </div>
 
 
@@ -219,7 +220,7 @@
 <a href="#resultsPage" data-rel="page" data-transition="slide" ><div id="saveInitial">
   <h2>
     Done
-</h2>
+  </h2>
 </div></a>
 
 </div> <!-- End of content -->
