--- a/studySpot/index1.html
+++ b/studySpot/index1.html
@@ -15,6 +15,7 @@
    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
            <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3&sensor=false&language=en"></script>
 
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700,100' rel='stylesheet' type='text/css'>
 
@@ -217,14 +218,14 @@
 
 </div>
 
+
+
+</div> <!-- End of content -->
 <a href="#resultsPage" data-rel="page" data-transition="slide" ><div id="saveInitial">
   <h2>
     Done
   </h2>
 </div></a>
-
-</div> <!-- End of content -->
-
 
 </div> <!-- End of first page -->
 
@@ -709,7 +710,7 @@
 
 
            </div> <!-- End of content -->
-            <a href="map.html" data-rel="page" data-transition="slide" ><div id="navigateB">
+            <a href="#luluMap" data-rel="page" data-transition="slide" ><div id="navigateB">
                     <img id="thumbs" src="thumbsUp-01.png">
                     <h2 class="title">Navigate</h2>
                 </div>
@@ -770,7 +771,7 @@
 
 
            </div> <!-- End of content -->
-            <a href="map2.html" data-rel="page" data-transition="slide" ><div id="navigateB">
+            <a href="#" data-rel="page" data-transition="slide" ><div id="navigateB">
                     <img id="thumbs" src="thumbsUp-01.png">
                     <h2 class="title">Navigate</h2>
                 </div>
@@ -831,7 +832,7 @@
 
 
            </div> <!-- End of content -->
-            <a href="map3.html" data-transition="slide"><div id="navigateB">
+            <a href="#" data-transition="slide"><div id="navigateB">
                     <img id="thumbs" src="thumbsUp-01.png">
                     <h2 class="title">Navigate</h2>
                 </div>
@@ -839,6 +840,122 @@
 
                 </div> <!-- End of first page -->
 
+        <!--Anderson Forum Page-->
+        <div data-role="page" id="luluMap" data-theme="a">
+            <script type="text/javascript">
+                destinationLatitude = 42.294514, 
+                destinationLongitude = -71.308954;
+            </script>    
+
+            <!-- STUDYSPOT HEADER -->
+            <div id="header">
+                <h1 class = "title">StudySpot</h1>
+                      <a href="favPage.html" data-transition="slide"><div id="heartDiv">
+                        <img id = "heartIcon" src = "heartIconD.png">
+                    </div></a>
+
+                    <a href="results.html" data-rel="page" data-transition="slide" ><div id="backArrowDiv">
+                        <img id = "arrowIcon" src = "arrowBack.png">
+                    </div></a>
+            </div>
+            <!-- END OF STUDYSPOT HEADER -->
+
+            <div data-role="content">   
+                <!--<div class="ui-bar-c ui-corner-all ui-shadow" style="padding:1em;"> -->
+                    <div id="map_canvas"></div>
+                <!--</div>-->   <div id="titleCont2">
+
+            <h2 class="title"> Anderson Forum</h2>
+            <h3 class="title"> Lulu Chow Wang Campus Center</h3>
+        </div>
+
+<div id="pathDir">
+                <div id="mapResults">                  
+                    <div id="directions"></div>
+
+                </div> <!--results-->
+            </div>
+            </div> <!--content-->
+        </div> <!--page--> 
+
+
+   <script type="text/javascript">
+
+            var map,
+                currentPosition,
+                directionsDisplay, 
+                directionsService,
+                destinationLatitude,
+                destinationLongitude 
+
+            function initializeMapAndCalculateRoute(lat, lon)
+            {
+                directionsDisplay = new google.maps.DirectionsRenderer(); 
+                directionsService = new google.maps.DirectionsService();
+
+                currentPosition = new google.maps.LatLng(lat, lon);
+
+                map = new google.maps.Map(document.getElementById('map_canvas'), {
+                   zoom: 15,
+                   center: currentPosition,
+                   mapTypeId: google.maps.MapTypeId.ROADMAP
+                 });
+
+                directionsDisplay.setMap(map);
+
+                 var currentPositionMarker = new google.maps.Marker({
+                    position: currentPosition,
+                    map: map,
+                    title: "Current position"
+                });
+
+                // calculate Route
+                calculateRoute();
+            }
+
+            function locError(error) {
+               // the current position could not be located
+            }
+
+            function locSuccess(position) {
+                // initialize map with current position and calculate the route
+                initializeMapAndCalculateRoute(position.coords.latitude, position.coords.longitude);
+            }
+
+            function calculateRoute() {
+
+                var targetDestination =  new google.maps.LatLng(destinationLatitude, destinationLongitude);
+                if (currentPosition != '' && targetDestination != '') {
+
+                    var request = {
+                        origin: currentPosition, 
+                        destination: targetDestination,
+                        travelMode: google.maps.DirectionsTravelMode["WALKING"]
+                    };
+
+                    directionsService.route(request, function(response, status) {
+                        if (status == google.maps.DirectionsStatus.OK) {
+                            directionsDisplay.setPanel(document.getElementById("directions"));
+                            directionsDisplay.setDirections(response); 
+
+                            $("#results").show();
+                        }
+                        else {
+                            $("#results").hide();
+                        }
+                    });
+                }
+                else {
+                    $("#results").hide();
+                }
+            }
+
+            $(document).live("pagebeforeshow", "#map_page", function() {
+                // find current position and on success initialize map and calculate the route
+                navigator.geolocation.getCurrentPosition(locSuccess, locError);
+            });
+
+        </script>
 
  
 </body>
