--- a/studySpot/index1.html
+++ b/studySpot/index1.html
@@ -357,14 +357,15 @@
   <h2 id="favTitle">Your favorites
   </h2>
 </div>
-<div id = "results2" role="content" class="ui-content">  <!-- Start of content -->
+
+<div id = "results" role="content" class="ui-content">  <!-- Start of content -->
 
   <div class = container>
-    <div class = "resultsImage">
+    <a href="#resultsAnd" data-rel="page" data-transition="slide" ><div class = "resultsImage">
       <img class = "placePhoto" src = "anderson.jpg">
-  </div>
+  </div></a>
 
-  <div class = "resultsText">
+  <a href="#resultsAnd" data-rel="page" data-transition="slide" ><div class = "resultsText">
       <h2>Lulu</h2>
       <h3 class="subT">Anderson Forum, 2nd floor</h3>
       <ul>
@@ -373,35 +374,35 @@
         <li><h3>Tables</h3></li>
 
     </ul>
-</div>
+</div></a>
 
-<div class = "arrowRight">
+<a href="#resultsAnd" data-rel="page" data-transition="slide" ><div class = "arrowRight">
   <img class = "arrowRightImg" src="arrowRightIcon.png">
 
-</div>
+</div></a>
 </div>
 
 
 <div class = container>
-    <div class = "resultsImage">
-      <img class = "placePhoto" src = "scicenter.jpg">
-  </div>
+   <a href="#sciCenter" data-rel="page" data-transition="slide" ><div class = "resultsImage">
+    <img class = "placePhoto" src = "scicenter.jpg">
+</div></a>
 
-  <div class = "resultsText">
-      <h2>Science center</h2>
-      <h3 class="subT">Leaky beaker, 1st floor</h3>
-      <ul>
-        <li><h3>Electric light</h3></li>
-        <li><h3>Tables</h3></li>
-        <li><h3>Whiteboard</h3></li>
+<a href="#sciCenter" data-rel="page" data-transition="slide" ><div class = "resultsText">
+    <h2>Science<br> Center</h2>
+    <h3 class="subT">Leaky beaker, 1st floor</h3>
+    <ul>
+      <li><h3>Electric light</h3></li>
+      <li><h3>Tables</h3></li>
+      <li><h3>Whiteboard</h3></li>
 
-    </ul>
-</div>
+  </ul>
+</div></a>
 
-<div class = "arrowRight">
-  <img class = "arrowRightImg" src="arrowRightIcon.png">
+<a href="#sciCenter" data-rel="page" data-transition="slide" ><div class = "arrowRight">
+    <img class = "arrowRightImg" src="arrowRightIcon.png">
 
-</div>
+</div></a>
 
 
 
@@ -409,30 +410,29 @@
 </div>
 
 <div class = "container">
-    <div class = "resultsImage">
-      <img class = "placePhoto" src = "clapp.jpg">
-  </div>
+  <a href="#clappP" data-rel="page" data-transition="slide" ><div class = "resultsImage">
+    <img class = "placePhoto" src = "clapp.jpg">
+</div></a>
 
-  <div class = "resultsText">
-      <h2>Clapp</h2>
-      <h3 class="subT">Room #123, 1st floor</h3>
-      <ul>
-        <li><h3>Electric light</h3></li>
-        <li><h3>Printer</h3></li>
-        <li><h3>Table</h3></li>
+<a href="#clappP" data-rel="page" data-transition="slide" ><div class = "resultsText">
+    <h2>Clapp</h2>
+    <h3 class="subT">Room #123, 1st floor</h3>
+    <ul>
+      <li><h3>Electric light</h3></li>
+      <li><h3>Printer</h3></li>
+      <li><h3>Table</h3></li>
 
-    </ul>
-</div>
+  </ul>
+</div></a>
 
-<div class = "arrowRight">
-  <img class = "arrowRightImg" src="arrowRightIcon.png">
+<a href="#clappP" data-rel="page" data-transition="slide" ><div class = "arrowRight">
+    <img class = "arrowRightImg" src="arrowRightIcon.png">
 
-</div>
+</div></a>
 </div>
 
 
 </div> <!-- End of content -->
-
 
 </div> <!-- End of first page -->
 
@@ -850,11 +850,11 @@
             <!-- STUDYSPOT HEADER -->
             <div id="header">
                 <h1 class = "title">StudySpot</h1>
-                      <a href="favPage.html" data-transition="slide"><div id="heartDiv">
+                      <a href="#favoritesPage2" data-transition="slide"><div id="heartDiv">
                         <img id = "heartIcon" src = "heartIconD.png">
                     </div></a>
 
-                    <a href="results.html" data-rel="page" data-transition="slide" ><div id="backArrowDiv">
+                    <a href="#resultsPage" data-rel="page" data-transition="slide" ><div id="backArrowDiv">
                         <img id = "arrowIcon" src = "arrowBack.png">
                     </div></a>
             </div>
