--- a/studySpot/index2.html
+++ b/studySpot/index2.html
@@ -832,7 +832,7 @@
 
 
            </div> <!-- End of content -->
-            <a href="#" data-transition="slide"><div id="navigateB">
+            <a href="map2.html" data-transition="slide"><div id="navigateB">
                     <img id="thumbs" src="thumbsUp-01.png">
                     <h2 class="title">Navigate</h2>
                 </div>
