--- a/studySpot/index2.html
+++ b/studySpot/index2.html
@@ -139,7 +139,7 @@
 <div id ="homePage" role="content" class="ui-content">  <!-- Start of content -->
 
 
-  <h2 id="spacePreftitle" class = "title">Space preference?</h2>
+  <h2 id="spacePreftitle" class = "title">What's your space preference?</h2>
 
 
   <div id ="placePrefer">
@@ -251,7 +251,7 @@
 </div>
 
 <a href="#filtersP" data-transition="slideup"><div id ="filters">
-  <h2>Filters
+  <h2>Add filters
   </h2>
 </div>
 </a>
