--- a/portfolio/Aurora-v1.1.1/Site/Static/index.html
+++ b/portfolio/Aurora-v1.1.1/Site/Static/index.html
@@ -180,13 +180,15 @@
 
 			<li class="portfolio-item" data-groups="all image">
 				<figure>
-					<img src="assets/images/portfolio-item.jpg" alt="">
+					<img src="assets/images/VRtile.jpg" alt="">
 					<figcaption>
 						<a href="portfolio/image.html" class="simple-ajax-popup"></a>
+						
 						<div class="caption-inner">
-							<h3 class="portfolio-item-title">Some work one</h3>
-							<div class="portfolio-item-desc">Image</div>
-						</div>
+							<h3 class="portfolio-item-title">VR Research Project</h3>
+							<div class="portfolio-item-desc">Exploring collaborative spatial design in a virtual environment</div>
+						
+					</a>
 					</figcaption>
 				</figure>
 			</li>
@@ -579,6 +581,9 @@
 	<div class="scroll-up">
 		<a href="#home"><i class="fa fa-angle-double-up"></i></a>
 	</div>
+
+
+	
 
 	<!-- Javascript files -->
 
