--- a/portfolio/Aurora-v1.1.1/Site/Static/index.html
+++ b/portfolio/Aurora-v1.1.1/Site/Static/index.html
@@ -182,7 +182,7 @@
 				<figure>
 					<img src="assets/images/VRtile.jpg" alt="">
 					<figcaption>
-						<a href="portfolio/image.html" class="simple-ajax-popup"></a>
+						<a href="vrResearch.html" class="simple-ajax-popup"></a>
 						
 						<div class="caption-inner">
 							<h3 class="portfolio-item-title">VR Research Project</h3>
