--- a/portfolio/Aurora-v1.1.1/Site/Static/vrResearch.html
+++ b/portfolio/Aurora-v1.1.1/Site/Static/vrResearch.html
@@ -5,7 +5,7 @@
 
 			<!-- Put your image here -->
 
-			<img src="assets/images/VRtile.jpg" alt="">
+			<img src="assets/images/vrCover.png" alt="">
 
 		</div><!-- .col -->
 	</div><!-- .row -->
