--- a/portfolio/Aurora-v1.1.1/Site/Static/vrResearch.html
+++ b/portfolio/Aurora-v1.1.1/Site/Static/vrResearch.html
@@ -40,6 +40,16 @@
 
 		</div>
 
+			<div class="row">
+		<div class="col-sm-12 text-center">
+
+			<!-- Put your image here -->
+
+			<img src="assets/images/interaction.png" alt="">
+
+		</div><!-- .col -->
+	</div><!-- .row -->
+
 	</div>
 
 	<section class="popup-callout">
