--- a/portfolio/Aurora-v1.1.1/Site/Static/index.html
+++ b/portfolio/Aurora-v1.1.1/Site/Static/index.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
+	
 	<title>Aurora</title>
 
 	<!-- CSS -->
@@ -78,7 +79,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">John Doe</a>
+					<a class="navbar-brand" href="index.html">Asiya Yakhina</a>
 				</div>
 
 				<div class="collapse navbar-collapse" id="custom-collapse">
