--- a/portfolio/Aurora-v1.1.1/Site/Static/vrResearch.html
+++ b/portfolio/Aurora-v1.1.1/Site/Static/vrResearch.html
@@ -55,6 +55,44 @@
 		</div><!-- .col -->
 	</div><!-- .row -->
 
+	<div class="row">
+		<div class="col-sm-12 text-center">
+
+			<div class="owl-carousel owl-theme portfolio-slider">
+
+				<!-- Put your slides here -->
+
+				<div class="item">
+					<img src="assets/images/wireframes/wireframe1.png" alt="">
+				</div>
+
+				<div class="item">
+					<img src="assets/images/wireframes/wireframe2.jpg" alt="">
+				</div>
+
+					<div class="item">
+					<img src="assets/images/wireframes/wireframe3.jpg" alt="">
+				</div>
+
+					<div class="item">
+					<img src="assets/images/wireframes/wireframe4.jpg" alt="">
+				</div>
+
+					<div class="item">
+					<img src="assets/images/wireframes/wireframe5.jpg" alt="">
+				</div>
+
+					<div class="item">
+					<img src="assets/images/wireframes/wireframe7.jpg" alt="">
+				</div>
+
+
+			</div>
+
+		</div><!-- .col -->
+	</div><!-- .row -->
+
+
 	<section class="popup-callout">
 		<div class="row">
 
