--- a/portfolio/Aurora-v1.1.1/Site/Static/vrResearch.html
+++ b/portfolio/Aurora-v1.1.1/Site/Static/vrResearch.html
@@ -67,23 +67,23 @@
 				</div>
 
 				<div class="item">
-					<img src="assets/images/wireframes/wireframe2.jpg" alt="">
+					<img src="assets/images/wireframes/wireframe2.png" alt="">
 				</div>
 
 					<div class="item">
-					<img src="assets/images/wireframes/wireframe3.jpg" alt="">
+					<img src="assets/images/wireframes/wireframe3.png" alt="">
 				</div>
 
 					<div class="item">
-					<img src="assets/images/wireframes/wireframe4.jpg" alt="">
+					<img src="assets/images/wireframes/wireframe4.png" alt="">
 				</div>
 
 					<div class="item">
-					<img src="assets/images/wireframes/wireframe5.jpg" alt="">
+					<img src="assets/images/wireframes/wireframe5.png" alt="">
 				</div>
 
 					<div class="item">
-					<img src="assets/images/wireframes/wireframe7.jpg" alt="">
+					<img src="assets/images/wireframes/wireframe7.png" alt="">
 				</div>
 
 
