--- a/portfolio/Aurora-v1.1.1/Site/Static/vrResearch.html
+++ b/portfolio/Aurora-v1.1.1/Site/Static/vrResearch.html
@@ -55,6 +55,13 @@
 		</div><!-- .col -->
 	</div><!-- .row -->
 
+<div class="row">
+			<div class="col-sm-12">
+				<p>Click on the arrows to see some wireframes that give an idea of what the interaction looks like</p>				
+			</div>
+		</div>
+
+
 	<div class="row">
 		<div class="col-sm-12 text-center">
 
@@ -91,6 +98,33 @@
 
 		</div><!-- .col -->
 	</div><!-- .row -->
+
+
+<div class="row">
+			<div class="col-sm-12">
+				<h4>Things I did</h4>
+					<ul>
+						<li>Conducted research on precedent virtual reality projects and technologies
+	Designed user personas and user journeys</li>
+	<li>Designed wireframes exemplifying the hierarchy of menus and key interactions within the application
+		</li>
+	<li>Implemented parts of the application UI in Unity
+	</li>
+	<li>
+	Collaborated closely with other lab members to design pilot studies and interview questions
+	</li>
+	<li>
+		Facilitated user testing sessions, observed and documented users’ behaviours and reactions
+		</li>
+		<li>
+	Conducted literature review on immersive environment interactions and remote collaboration
+		</li>
+
+					</ul>
+
+									
+				</div>
+			</div>
 
 
 	<section class="popup-callout">
