--- a/portfolio/Aurora-v1.1.1/Site/Static/vrResearch.html
+++ b/portfolio/Aurora-v1.1.1/Site/Static/vrResearch.html
@@ -55,12 +55,14 @@
 		</div><!-- .col -->
 	</div><!-- .row -->
 
+	<div class="popup-content">
+
 <div class="row">
 			<div class="col-sm-12">
 				<p>Click on the arrows to see some wireframes that give an idea of what the interaction looks like</p>				
 			</div>
 		</div>
-
+</div>
 
 	<div class="row">
 		<div class="col-sm-12 text-center">
@@ -100,6 +102,7 @@
 	</div><!-- .row -->
 
 
+	<div class="popup-content">
 <div class="row">
 			<div class="col-sm-12">
 				<h4>Things I did</h4>
@@ -125,6 +128,7 @@
 									
 				</div>
 			</div>
+		</div>
 
 
 	<section class="popup-callout">
