--- a/portfolio/Aurora-v1.1.1/Site/Static/index.html
+++ b/portfolio/Aurora-v1.1.1/Site/Static/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	
+
 	<title>Aurora</title>
 
 	<!-- CSS -->
@@ -168,12 +168,12 @@
 
 			<li class="portfolio-item" data-groups="all video">
 				<figure>
-					<img src="assets/images/portfolio-item.jpg" alt="">
+					<img src="assets/images/blockedOnline/blockedOnlineTile-01.png" alt="">
 					<figcaption>
-						<a href="portfolio/video.html" class="simple-ajax-popup"></a>
+						<a href="blockedOnline.html" class="simple-ajax-popup"></a>
 						<div class="caption-inner">
-							<h3 class="portfolio-item-title">Some work one</h3>
-							<div class="portfolio-item-desc">Video</div>
+							<h3 class="portfolio-item-title">Web design</h3>
+							<div class="portfolio-item-desc">Blocked Online: Unveiling Internet Censorship</div>
 						</div>
 					</figcaption>
 				</figure>
@@ -186,7 +186,7 @@
 						<a href="vrResearch.html" class="simple-ajax-popup"></a>
 						
 						<div class="caption-inner">
-							<h3 class="portfolio-item-title">VR Research Project</h3>
+							<h3 class="portfolio-item-title">VR Research</h3>
 							<div class="portfolio-item-desc">Exploring collaborative spatial design in a virtual environment</div>
 						
 					</a>
