--- a/portfolio/Aurora-v1.1.1/Site/Static/blockedOnline.html
+++ b/portfolio/Aurora-v1.1.1/Site/Static/blockedOnline.html
@@ -3,12 +3,13 @@
 	<div class="row">
 		<div class="col-sm-12 text-center">
 
-			<!-- Put your video here -->
+			<!-- Put your image here -->
 
-			<iframe width="420" height="250" src="//www.youtube.com/embed/zpOULjyy-n8?rel=0" frameborder="0" allowfullscreen></iframe>
+			<img src="assets/images/blockedOnline/mapPopups.gif" alt="">
 
 		</div><!-- .col -->
 	</div><!-- .row -->
+
 
 	<div class="popup-content">
 		<div class="row">
@@ -16,9 +17,9 @@
 			<div class="col-sm-12">
 
 				<div class="popup-header">
-					<h2 class="popup-title">My works</h2>
+					<h2 class="popup-title">Blocked Online</h2>
 					<div class="popup-subtitle">
-						Video
+						Unveiling internet censorship
 					</div>
 					<div class="popup-line"></div>
 				</div>
