--- a/portfolio/Aurora-v1.1.1/Site/Static/index.html
+++ b/portfolio/Aurora-v1.1.1/Site/Static/index.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="">
 
 
-	<title>Aurora</title>
+	<title>Asiya Yakhina</title>
 
 	<!-- CSS -->
 	<!-- Bootstrap core CSS -->
@@ -48,19 +48,6 @@
 
 	<!-- Home start -->
 
-	<section id="home" class="module-image js-height-full">
-
-		<div class="intro">
-			<div class="hello">Hello, my name is John Doe and</div>
-			<h1>I am Front-End Developer</h1>
-			<div class="who-creates">creating modern and responsive design for Web and Mobile</div>
-		</div>
-
-		<div class="mouse-icon">
-			<div class="wheel"></div>
-		</div>
-
-	</section>
 
 	<!-- Home end -->
 
@@ -84,11 +71,11 @@
 
 				<div class="collapse navbar-collapse" id="custom-collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#home">home</a></li>
-						<li><a href="#portfolio">Works</a></li>
-						<li><a href="#services">Service</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#home">HOME</a></li>
+						<li><a href="#portfolio">WORKS</a></li>
+						<li><a href="#services">SERVICE</a></li>
+						<li><a href="#about">ABOUT</a></li>
+						<li><a href="#contact">CONTACT</a></li>
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 								UI Elements <span class="caret"></span>
@@ -172,7 +159,7 @@
 					<figcaption>
 						<a href="blockedOnline.html" class="simple-ajax-popup"></a>
 						<div class="caption-inner">
-							<h3 class="portfolio-item-title">Web design</h3>
+							<h3 class="portfolio-item-title">Web Design</h3>
 							<div class="portfolio-item-desc">Blocked Online: Unveiling Internet Censorship</div>
 						</div>
 					</figcaption>
@@ -187,7 +174,7 @@
 						
 						<div class="caption-inner">
 							<h3 class="portfolio-item-title">VR Research</h3>
-							<div class="portfolio-item-desc">Exploring collaborative spatial design in a virtual environment</div>
+							<div class="portfolio-item-desc">Exploring Collaborative Spatial Design <br>in a Virtual Environment</div>
 						
 					</a>
 					</figcaption>
@@ -209,12 +196,12 @@
 
 			<li class="portfolio-item" data-groups="all video">
 				<figure>
-					<img src="assets/images/portfolio-item.jpg" alt="">
+					<img src="assets/images/arcelik/istiklalTile.png" alt="">
 					<figcaption>
-						<a href="portfolio/video.html" class="simple-ajax-popup"></a>
+						<a href="arcelik.html" class="simple-ajax-popup"></a>
 						<div class="caption-inner">
-							<h3 class="portfolio-item-title">Some work one</h3>
-							<div class="portfolio-item-desc">Video</div>
+							<h3 class="portfolio-item-title">Experience design</h3>
+							<div class="portfolio-item-desc">Rethinking retail experience for millennials</div>
 						</div>
 					</figcaption>
 				</figure>
@@ -239,29 +226,6 @@
 
 	<!-- Portfolio end -->
 
-	<!-- Callout start -->
-
-	<section class="callout">
-		<div class="container">
-
-			<div class="row">
-
-				<div class="col-md-8 col-lg-6 col-lg-offset-2">
-					<h2>ARE YOU READY TO START?</h2>
-					<div class="callout-decription">
-						I'm currently available for freelance work.
-					</div>
-				</div>
-
-				<div class="col-md-4 col-lg-2 callout-btn">
-					<a href="#contact" class="btn btn-lg btn-block btn-custom-1">Contact me</a>
-				</div>
-
-			</div><!-- .row -->
-		</div><!-- .container -->
-	</section>
-
-	<!-- Callout end -->
 
 	<!-- Services start -->
 
