--- a/portfolio/Aurora-v1.1.1/Site/Static/blockedOnline.html
+++ b/portfolio/Aurora-v1.1.1/Site/Static/blockedOnline.html
@@ -5,7 +5,7 @@
 
 			<!-- Put your image here -->
 
-			<img src="assets/images/blockedOnline/mapPopups.gif" alt="">
+			<img src="assets/images/blockedOnline/blockedOnlineLogo.png" alt="">
 
 		</div><!-- .col -->
 	</div><!-- .row -->
@@ -31,32 +31,203 @@
 		<div class="row">
 
 			<div class="col-sm-12">
-				<p>This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show. He who searches for meaning here will be sorely disappointed. These words are here to provide the reader with a basic impression of how actual text will appear in its final presentation.</p>
-				<p>This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show. He who searches for meaning here will be sorely disappointed. These words are here to provide the reader with a basic impression of how actual text will appear in its final presentation.</p>
-				<p>This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show. He who searches for meaning here will be sorely disappointed. These words are here to provide the reader with a basic impression of how actual text will appear in its final presentation.</p>
-				<p>You can preview Startup Framework <a href="#">here</a>.</p>
+				<p>I worked on this project with a friend who created an application that allows aware citizens to report on online censorship from different parts of the world. Coming from a country with heavy censorship of the web, I was truly excited to make this project happen.</p>
+
+				<p>BlockedOnline uses crowdsourcing approach to gather data on internet censorship. This project relies on people from various countries to download the application from the website, run it on their local machine and thereby provide information on blocked websites in their region. The goal behind BlockedOnline is to provide accessible and readable information on internet censorship in different countries and to raise global awareness of what often remains hidden from the eyes of the public.</p>
+
 			</div>
 
 		</div>
 
-	</div>
 
-	<section class="popup-callout">
+
 		<div class="row">
 
 			<div class="col-sm-12">
-				<h3>Like Our Works?</h3>
-				<div class="module-line"></div>
-			</div>
 
-			<div class="col-sm-12">
-				<div class="btn-list">
-					<a href="index.html#services" class="btn btn-custom-3" target="_blank">View Services</a>
-					<a href="index.html#contact" class="btn btn-custom-4" target="_blank">Start Project</a>
+				<div class="popup-header">
+					<h3 class="popup-title">Website overview</h3>
+					
 				</div>
+
 			</div>
 
 		</div>
-	</section>
 
-</div>
+
+		<div class="row">
+
+			<div class="col-sm-12">
+				<p>The landing page presents the user with an interactive map showing statistics on blocked websites around the world, as well as two main action buttons inviting the user to either explore data or get involved in the project.</p>
+
+			</div>
+
+		</div>
+	</div>
+
+
+	<div class="row">
+		<div class="col-sm-12 text-center">
+
+			<!-- Put your image here -->
+
+			<img src="assets/images/blockedOnline/map.gif" alt="">
+
+		</div><!-- .col -->
+	</div><!-- .row -->
+
+
+	<div class="popup-content2">
+
+
+		<div class="row">
+
+			<div class="col-sm-12">
+				<p>Under the “Explore data” tab, the user can research censorship facts by URL or by country.</p>
+
+			</div>
+
+		</div>
+	</div>
+
+
+
+	<div class="row">
+		<div class="col-sm-12 text-center">
+
+			<!-- Put your image here -->
+
+			<img src="assets/images/blockedOnline/searchComb.png" alt="">
+
+		</div><!-- .col -->
+	</div><!-- .row -->
+
+
+	<div class="popup-content2">
+
+
+		<div class="row">
+
+			<div class="col-sm-12">
+				<p>The follwing templates show search results by country and by a website. The structure of the pages allows users to view information quickly, but dive into specific topics if they’re interested.</p>
+
+			</div>
+
+		</div>
+	</div>
+
+
+	<div class="row">
+		<div class="col-sm-12 text-center">
+
+			<!-- Put your image here -->
+
+			<img src="assets/images/blockedOnline/byCountry.png" alt="">
+
+		</div><!-- .col -->
+	</div><!-- .row -->
+
+
+	<div class="row">
+		<div class="col-sm-12 text-center">
+			<!-- Put your image here -->
+			<img src="assets/images/blockedOnline/byWeb.png" alt="">
+
+		</div><!-- .col -->
+	</div><!-- .row -->
+
+
+
+
+	<div class="popup-content2">
+		<div class="row">
+			<div class="col-sm-12">
+				<p>Under the “Get’ Involved” tab, the user can download the application, learn more about the project and find contact information.</p>
+			</div>
+		</div>
+	</div>
+
+
+
+	<div class="row">
+		<div class="col-sm-12 text-center">
+			<!-- Put your image here -->
+			<img src="assets/images/blockedOnline/getInv.png" alt="">
+
+		</div><!-- .col -->
+	</div><!-- .row -->
+
+
+
+
+	<div class="row">
+
+			<div class="col-sm-12">
+
+				<div class="popup-header">
+					<h3 class="popup-title"><br>Logo design</h3>
+				</div>
+	
+			<!-- Put your image here -->
+			<img src="assets/images/blockedOnline/logoProcess.png" alt="">
+
+		</div><!-- .col -->
+	</div><!-- .row -->
+
+
+<div class="row">
+
+			<div class="col-sm-12">
+
+				<div class="popup-header">
+					<h3 class="popup-title"><br>Icon design</h3>
+				</div>
+
+			<!-- Put your image here -->
+			<img src="assets/images/blockedOnline/icons.png" alt="">
+
+		</div><!-- .col -->
+	</div><!-- .row -->
+
+
+
+
+
+
+	<div class="popup-content">
+		<div class="row">
+
+			<div class="col-sm-12">
+
+				<div class="popup-header">
+					<h3 class="popup-title">Things I did</h3>
+					
+				</div>
+
+
+				<ul>
+
+					<li>Worked closely with my teammate to develop the concept and the overall vision behind the project
+						<li>Designed the UI of the website</li>
+						<li>Designed data visualizations and ways to organize information on the page to bring clarity to the person exploring the issue</li>
+						<li>Researched on the ways to increase conversion rates to attract a large number of individuals to download the application and help collect data</li>
+						<li>Used the collected research to inform the designs and copywriting</li>
+						<li>Designed the project logo</li>
+						<li>Designed the icons for the website</li>
+						<li>Made pixel-perfect mockups of the design</li>
+						<li>Worked closely with the developer to ensure accurate implementation of the design</li>
+
+					</ul>
+
+
+				</div>
+
+			</div>
+		</div>
+
+
+
+
+	</div>
+
+
