--- a/portfolio/Aurora-v1.1.1/Site/Static/index.html
+++ b/portfolio/Aurora-v1.1.1/Site/Static/index.html
@@ -165,12 +165,12 @@
 
 			<li class="portfolio-item" data-groups="all slideshow">
 				<figure>
-					<img src="assets/images/portfolio-item.jpg" alt="">
+					<img src="assets/images/studySpot/studySpotTile.png" alt="">
 					<figcaption>
-						<a href="portfolio/slideshow.html" class="simple-ajax-popup"></a>
+						<a href="studySpot.html" class="simple-ajax-popup"></a>
 						<div class="caption-inner">
-							<h3 class="portfolio-item-title">Some work one</h3>
-							<div class="portfolio-item-desc">Slideshow</div>
+							<h3 class="portfolio-item-title">IPhone App Design + Development </h3>
+							<div class="portfolio-item-desc">Helping students find their perfect study spot</div>
 						</div>
 					</figcaption>
 				</figure>
