--- a/blockedOnline.html
+++ b/blockedOnline.html
@@ -97,7 +97,7 @@
 		<div class="row">
 
 			<div class="col-sm-12">
-				<p>Under the “Explore data” tab, the user can research censorship facts by URL or by country.</p>
+				<p>Under the “Explore Data” tab, the user can research censorship facts by URL or by country.</p>
 
 			</div>
 
