--- a/vrResearch.html
+++ b/vrResearch.html
@@ -132,7 +132,7 @@
 		</div>
 
 
-	<section class="popup-callout">
+	<section class="popup-calloutBut">
 		<div class="row">
 
 			<div class="col-sm-12">
