--- a/arcelik.html
+++ b/arcelik.html
@@ -1,3 +1,4 @@
+
 <div id="custom-content" class="white-popup-block">
 
 	<div class="row">
@@ -235,6 +236,7 @@ in a flexible and portable space that would host various events based on the com
 					</div>
 				</div>
 		</div>
+	</div>
 		<div class="row">
 			<div class="col-sm-12">
 				<p>These journey maps show potential scenarios of inviting the customer into the store for a beauty studio event:
@@ -304,6 +306,7 @@ in a flexible and portable space that would host various events based on the com
 					</div>
 				</div>
 		</div>
+	</div>
 		<div class="row">
 			<div class="col-sm-12">
 				<p>Gesture controlled interactive screens allow the customers to get familiar with Arcelik products with the help of technology and other customers. 3D display lets visitors examine digital models of items up-close, learn about their various features, and read customer reviews.
@@ -390,9 +393,10 @@ in a flexible and portable space that would host various events based on the com
 	<div class="row">
 		<div class="col-sm-12 text-center">
 
-			<!-- Put your video here -->
+		
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/9ARmyP9vsJ8" frameborder="0" allowfullscreen></iframe>
 
-			<iframe src="https://player.vimeo.com/video/127719842" width="500" height="375" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+		<!--<iframe src="https://player.vimeo.com/video/127719842" width="500" height="375" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->	
 
 		</div><!-- .col -->
 	</div><!-- .row -->
