--- a/index.html
+++ b/index.html
@@ -72,19 +72,9 @@
 				<div class="collapse navbar-collapse" id="custom-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#home">HOME</a></li>
-						<li><a href="#portfolio">WORKS</a></li>
-						<li><a href="#services">SERVICE</a></li>
+						<li><a href="#portfolio">PORTFOLIO</a></li>
+				
 						<li><a href="#about">ABOUT</a></li>
-						<li><a href="#contact">CONTACT</a></li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-								UI Elements <span class="caret"></span>
-							</a>
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="icons.html">Icons</a></li>
-								<li><a href="components.html">Components</a></li>
-							</ul>
-						</li>
 					</ul>
 				</div>
 
@@ -144,7 +134,7 @@
 					<figcaption>
 						<a href="arcelik.html" class="simple-ajax-popup"></a>
 						<div class="caption-inner">
-							<h3 class="portfolio-item-title">Experience design</h3>
+							<h3 class="portfolio-item-title">Experience Design</h3>
 							<div class="portfolio-item-desc">Rethinking retail experience for millennials</div>
 						</div>
 					</figcaption>
@@ -187,7 +177,7 @@
 					<figcaption>
 						<a href="brainstorming.html" class="simple-ajax-popup"></a>
 						<div class="caption-inner">
-							<h3 class="portfolio-item-title">Brainstorm facilitation</h3>
+							<h3 class="portfolio-item-title">Brainstorm Facilitation</h3>
 							<div class="portfolio-item-desc">Using design thinking principles and user-centered approach<br>
 								to lead creative ideation meetings</div>
 						</div>
@@ -219,225 +209,12 @@
 
 	<!-- Services start -->
 
-	<section id="services" class="module module-gray">
-		<div class="container">
-			<div class="row">
 
-				<div class="col-sm-6 col-sm-offset-3">
 
-					<div class="module-header wow fadeInUp">
-						<h2 class="module-title">Services</h2>
-						<div class="module-line"></div>
-						<div class="module-subtitle">
-							He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections.
-						</div>
-						<div class="module-line"></div>
-					</div>
-
-				</div>
-
-			</div>
-
-			<div class="row">
-
-				<div class="col-sm-3">
-
-					<div class="iconbox wow bounceIn">
-						<div class="iconbox-icon">
-							<span class="icon-trophy"></span>
-						</div>
-						<div class="iconbox-text">
-							<h3 class="iconbox-title">Logo Design</h3>
-							<div class="iconbox-desc">
-								Thus, then, one of our own noble stamp, even a whaleman, is the tutelary guardian of England.
-							</div>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="col-sm-3">
-
-					<div class="iconbox wow bounceIn">
-						<div class="iconbox-icon">
-							<span class="icon-bubbles"></span>
-						</div>
-						<div class="iconbox-text">
-							<h3 class="iconbox-title">Marketing</h3>
-							<div class="iconbox-desc">
-								Thus, then, one of our own noble stamp, even a whaleman, is the tutelary guardian of England.
-							</div>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="col-sm-3">
-
-					<div class="iconbox wow bounceIn">
-						<div class="iconbox-icon">
-							<span class="icon-screen-desktop"></span>
-						</div>
-						<div class="iconbox-text">
-							<h3 class="iconbox-title">Design</h3>
-							<div class="iconbox-desc">
-								Thus, then, one of our own noble stamp, even a whaleman, is the tutelary guardian of England.
-							</div>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="col-sm-3">
-
-					<div class="iconbox wow bounceIn">
-						<div class="iconbox-icon">
-							<span class="icon-rocket"></span>
-						</div>
-						<div class="iconbox-text">
-							<h3 class="iconbox-title">Branding</h3>
-							<div class="iconbox-desc">
-								Thus, then, one of our own noble stamp, even a whaleman, is the tutelary guardian of England.
-							</div>
-						</div>
-					</div>
-
-				</div>
-
-			</div><!-- .row -->
-		</div><!-- .container -->
-	</section>
-
-	<!-- Services end -->
-
-	<!-- About start -->
-
-	<section id="about">
-
-		<div class="row position-relative margin-0">
-
-			<div class="col-xs-12 col-md-6 side-image"></div>
-
-			<div class="col-xs-12 col-md-6 col-md-offset-6 side-image-text">
-
-				<div class="row">
-
-					<div class="col-sm-12">
-
-						<div class="module-header module-header-left wow fadeInUp">
-							<h2 class="module-title">About me</h2>
-							<div class="module-subtitle">
-								He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections.
-							</div>
-							<div class="module-line"></div>
-						</div>
-
-					</div>
-
-				</div><!-- .row -->
-
-				<div class="row">
-
-					<div class="col-sm-6">
-
-						<div class="iconboxleft wow fadeInUp">
-							<div class="iconboxleft-icon">
-								<span class="icon-camera"></span>
-							</div>
-							<div class="iconboxleft-text">
-								<h3 class="iconboxleft-title">Photographer</h3>
-								<div class="iconboxleft-desc">
-									Thus, then, one of our own noble stamp, even a whaleman, is the tutelary guardian of England.
-								</div>
-							</div>
-						</div>
-
-					</div>
-
-					<div class="col-sm-6">
-
-						<div class="iconboxleft wow fadeInUp" data-wow-delay=".2s">
-							<div class="iconboxleft-icon">
-								<span class="icon-earphones"></span>
-							</div>
-							<div class="iconboxleft-text">
-								<h3 class="iconboxleft-title">Music</h3>
-								<div class="iconboxleft-desc">
-									Thus, then, one of our own noble stamp, even a whaleman, is the tutelary guardian of England.
-								</div>
-							</div>
-						</div>
-
-					</div>
-
-				</div><!-- .row -->
-
-				<div class="row">
-
-					<div class="col-sm-6">
-
-						<div class="iconboxleft wow fadeInUp">
-							<div class="iconboxleft-icon">
-								<span class="icon-ghost"></span>
-							</div>
-							<div class="iconboxleft-text">
-								<h3 class="iconboxleft-title">Ghosts</h3>
-								<div class="iconboxleft-desc">
-									Thus, then, one of our own noble stamp, even a whaleman, is the tutelary guardian of England.
-								</div>
-							</div>
-						</div>
-
-					</div>
-
-					<div class="col-sm-6">
-
-						<div class="iconboxleft wow fadeInUp" data-wow-delay=".2s">
-							<div class="iconboxleft-icon">
-								<span class="icon-magic-wand"></span>
-							</div>
-							<div class="iconboxleft-text">
-								<h3 class="iconboxleft-title">Magic</h3>
-								<div class="iconboxleft-desc">
-									Thus, then, one of our own noble stamp, even a whaleman, is the tutelary guardian of England.
-								</div>
-							</div>
-						</div>
-
-					</div>
-
-				</div><!-- .row -->
-
-			</div><!-- col-xs-12 -->
-
-		</div><!-- .row -->
-	</section>
-
-	<!-- About end -->
-
-	<!-- Twitter start -->
-
-	<section id="twitter" class="module module-gray">
-		<div class="container">
-			<div class="row">
-
-				<div class="col-sm-6 col-sm-offset-3">
-
-					<div class="module-header wow fadeInUp">
-						<div class="module-icon"><span class="icon-social-twitter"></span></div>
-					</div>
-
-					<div class="testimonials owl-carousel wow fadeInUp"></div>
-
-				</div>
-
-			</div><!-- .row -->
-		</div><!-- .container -->
-	</section>
-
-	<!-- Twitter end -->
 
 	<!-- Google Map start-->
+	<div id="footerType">
+	</div>
 
 	<section id="map-section">
 
@@ -447,87 +224,10 @@
 
 	<!-- Google Map end -->
 
-	<!-- Contact start -->
-
-	<section id="contact" class="module">
-		<div class="container">
-			<div class="row">
-
-				<div class="col-sm-6 col-sm-offset-3">
-
-					<div class="module-header">
-						<h2 class="module-title">Contact</h2>
-						<div class="module-line"></div>
-						<div class="module-subtitle">
-							He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections.
-						</div>
-						<div class="module-line"></div>
-					</div>
-
-				</div>
-
-			</div><!-- .row -->
-
-			<div class="row">
-
-				<div class="col-sm-6 col-sm-offset-3">
-
-					<form id="contact-form" role="form">
-						<div class="ajax-hidden">
-							<div class="form-group wow fadeInUp">
-								<label class="sr-only" for="c_name">Name</label>
-								<input type="text" id="c_name" class="form-control" name="c_name" placeholder="Name">
-							</div>
-
-							<div class="form-group wow fadeInUp" data-wow-delay=".1s">
-								<label class="sr-only" for="c_email">Email address</label>
-								<input type="email" id="c_email" class="form-control" name="c_email" placeholder="E-mail">
-							</div>
-
-							<div class="form-group wow fadeInUp" data-wow-delay=".2s">
-								<textarea class="form-control" id="c_message" name="c_message" rows="7" placeholder="Your message"></textarea>
-							</div>
-
-							<button type="submit" class="btn btn-block btn-custom-2 wow fadeInUp" data-wow-delay=".3s">Send it
-							</button>
-						</div>
-						<div class="ajax-response"></div>
-					</form>
-
-				</div>
-
-			</div><!-- .row -->
-		</div><!-- .container -->
-	</section>
-
-	<!-- Contact end -->
-
+	
 	<!-- Footer start -->
 
-	<footer id="footer">
-		<div class="container">
-			<div class="row">
 
-				<div class="col-sm-12">
-
-					<ul class="social-links">
-						<li><a href="#" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-google-plus"></i></a></li>
-						<li><a href="#" class="wow fadeInUp" data-wow-delay=".3s"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
-					</ul>
-
-					<p class="copyright">
-						© 2014 Aurora, All Rights Reserved.
-					</p>
-
-				</div>
-
-			</div><!-- .row -->
-		</div><!-- .container -->
-	</footer>
 
 	<!-- Footer end -->
 
