--- a/walle/AboutMe.html
+++ b/walle/AboutMe.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -40,84 +40,104 @@
 </head>
 <body>
 
-	<!-- Preloader -->
+<div id="custom-content" class="white-popup-block">
 
-	<div id="preloader">
-		<div id="status">
-			<div class="status-mes"></div>
+	<div class="row">
+		<div class="col-sm-12 text-center">
+
+			<!-- Put your image here -->
+
+			<img src="assets/images/brainstorming/brainstCover.png" alt="">
+
+		</div><!-- .col -->
+	</div><!-- .row -->
+
+	<div class="popup-content">
+		<div class="row">
+
+			<div class="col-sm-12">
+
+				<div class="popup-header">
+					<h2 class="popup-title">Brainstorm Facilitation</h2>
+					<div class="popup-subtitle">
+						Using design thinking principles to lead creative ideation meetings
+					</div>
+					<div class="popup-line"></div>
+				</div>
+
+				<p>During one of my semesters at <a href "http://mobile.mit.edu/">Mobile Experience Lab</a> at MIT, I organized brainstorming sessions for the lab members, as well as for outside clients such as <a href="http://www.generalsensing.com/#home-3">General Sensing</a> and <a href="http://www.jaguarusa.com/index.html">Jaguar</a>. I worked on creating an environment that is conducive to a productive ideation process by helping the participants engage in discussion, and get inspired by their surroundings and each other. I also designed complementary materials that informed the ideation process and helped bring all participants to the same page.</p>
+
+				<p>One type of material that we designed individually for various clients, is a value map. The purpose of this template is to 
+				help participants focus on the customer during the ideation process and document their ideas in a comprehensive readable form:
+				</p>
+
+
+
+			</div>
+
 		</div>
+
+
+</div>
+
+	<div class="row">
+		<div class="col-sm-12 text-center">
+
+			<!-- Put your image here -->
+
+			<img src="assets/images/brainStorming/valuemap.png" alt="">
+
+		</div><!-- .col -->
 	</div>
 
-	<!-- Home start -->
+<div class ="popup-content2">
+<div class="row">
+<div class="col-sm-12">
+<p>
+	After the participants are done brainstorming, they can use this presentation template to document a particular idea into a comprehensive report to be used during the presentation:
+</p>
+</div>
+</div>
+</div>
 
+<div class="row">
+		<div class="col-sm-12 text-center">
 
-	<!-- Home end -->
+			<!-- Put your image here -->
 
-	<!-- Navigation start -->
+			<img src="assets/images/brainStorming/template.png" alt="">
 
-	<header class="header">
+		</div><!-- .col -->
+	</div>
 
-		<nav class="navbar navbar-custom" role="navigation">
+	<div class ="popup-content2">
+<div class="row">
+<div class="col-sm-12">
+<p>
+	We also designed 6x4" brainstorming cards designed to help participants cluster various entities such as potential customers, contexts, or technologies into situations or problems that need to be solved by their product:
+</p>
+</div>
+</div>
+</div>
 
-			<div class="container">
-
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#custom-collapse">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="index.html">ASIYA YAKHINA</a>
-				</div>
-
-				<div class="collapse navbar-collapse" id="custom-collapse">
-					<ul class="nav navbar-nav navbar-right">
-				
-						<li><a style="color:#49e2d6" href="index.html">PORTFOLIO</a></li>
-						<li><a href="AboutMe.html">ABOUT ME</a></li>
 	
-						<li><a href="Resume.html">RESUME</a></li>
-					</ul>
-				</div>
+<div class="row">
+		<div class="col-sm-12 text-center">
 
-			</div><!-- .container -->
+			<!-- Put your image here -->
 
-		</nav>
+			<img src="assets/images/brainStorming/cards.png" alt="">
 
-	</header>
-
-	<!-- Navigation end -->
-
-	<!-- Portfolio start -->
-
-	<section id="portfolio" class="module paddingb-none">
-		<div class="container">
-			<div class="row">
-
-				<div class="col-sm-12">
-
-					<div class="module-headerIndex">
-						<h1>User interface and experience designer.
-						</h1>
+		</div><!-- .col -->
+	</div>
 
 
-						<div class="module-subtitle">
-						Loves working with people, telling stories, and testing her designs with real users.
-					</div>
-						
-					</div>
-
-				</div>
-
-			</div><!-- .row -->
-
-			<!-- Portfolio Filter start-->
+</div>
 
 
-			<!-- Portfolio Filter end -->
 
-		</div><!-- .contaier -->
+<section id="portfolio" class="module paddingb-none">
+
 
 		<ul class="portfolio-items-container">
 
@@ -129,7 +149,7 @@
 					<figcaption>
 						<a href="StudySpot.html"></a>
 						<div class="caption-inner">
-							<h3 class="portfolio-item-title">iPhone App Design + Development </h3>
+							<h3 class="portfolio-item-title">IPhone App Design + Development </h3>
 							<div class="portfolio-item-desc">Helping students find their perfect study spot</div>
 						</div>
 					</figcaption>
@@ -202,7 +222,7 @@
 						<a href="walle/Walle.html"></a>
 						<div class="caption-inner">
 							<h3 class="portfolio-item-title">3D Modelling</h3>
-							<div class="portfolio-item-desc">Recreating Wall-E in Three.js</div>
+							<div class="portfolio-item-desc">Recreating Wall-E in THREE.js</div>
 						</div>
 					</figcaption>
 				</figure>
@@ -213,38 +233,15 @@
 	</section>
 
 	<!-- Portfolio end -->
-</div>
-
-	<!-- Services start -->
-
-
-
-
-	<!-- Google Map start-->
 	<div id="footerType">
 	</div>
-
-	<section id="map-section">
+<section id="map-section">
 
 		<div id="map"></div>
 
 	</section>
 
-	<!-- Google Map end -->
 
-	
-	<!-- Footer start -->
-
-
-
-	<!-- Footer end -->
-
-	<!-- Scroll-up -->
-
-
-	
-
-	<!-- Javascript files -->
 
 	<script src="assets/js/jquery-1.11.1.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
