--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -40,22 +40,10 @@
 </head>
 <body>
 
-	<!-- Preloader -->
-
-	<div id="preloader">
-		<div id="status">
-			<div class="status-mes"></div>
-		</div>
-	</div>
-
-	<!-- Home start -->
 
 
-	<!-- Home end -->
 
-	<!-- Navigation start -->
-
-	<header class="header">
+<header class="header">
 
 		<nav class="navbar navbar-custom" role="navigation">
 
@@ -74,8 +62,8 @@
 				<div class="collapse navbar-collapse" id="custom-collapse">
 					<ul class="nav navbar-nav navbar-right">
 				
-						<li><a style="color:#49e2d6" href="index.html">PORTFOLIO</a></li>
-						<li><a href="AboutMe.html">ABOUT ME</a></li>
+						<li><a href="index.html">PORTFOLIO</a></li>
+						<li><a style="color:#49e2d6" href="AboutMe.html">ABOUT ME</a></li>
 	
 						<li><a href="Resume.html">RESUME</a></li>
 					</ul>
@@ -87,37 +75,62 @@
 
 	</header>
 
-	<!-- Navigation end -->
-
-	<!-- Portfolio start -->
-
-	<section id="portfolio" class="module paddingb-none">
-		<div class="container">
-			<div class="row">
-
-				<div class="col-sm-12">
-
-					<div class="module-headerIndex">
-						<h1>User interface and experience designer.
-						</h1>
 
 
-						<div class="module-subtitle">
-						Loves working with people, telling stories, and testing her designs with real users.
-					</div>
+
+
+<div id="custom-content" class="white-popup-block">
+
+
+
+		
 						
+							<div class="row">
+
+					<div class="col-sm-12" text = "center">
+						<p>
+								I’m graduating with Bachelors in Media Arts and Sciences in Spring of 2016. My major uniquely combines classes in computer science, design, and art. This has training enabled to get exposed to all stages of design process, complete multiple projects from start to finish, and collaborate effectively in interdisciplinary teams.
+							</p>
+
+							<p>
+								My interests lie in designing user interfaces and experiences. I also love playing and making games. Last summer, I worked as a UX designer on a game at Microsoft and learned a lot in the process. I’ll tell you more about it as soon as it gets shipped :)
+							</p>
+
+						</div>
 					</div>
 
+							<div class="module-subtitle2" id="blue">
+
+							I believe that design is the art of storytelling and usability. A good story comes from pure creative effort. Usability is achieved through extensive testing. I personally worship both of these design stages and consider them critically important in any project.
+						</div>
+
+
+
+		<div class="row">
+		<div class="col-sm-12 text-center">
+
+			<!-- Put your image here -->
+
+			<img src="prof.jpg" alt="">
+
+		</div><!-- .col -->
+	</div><!-- .row -->
+						</div>
+
+
+
+
+						<div class="row">
+
+			<div class="col-sm-12">
+
+				<div class="popup-headerWork">
+					<h2 class="popup-title">More Work</h2>
 				</div>
-
-			</div><!-- .row -->
-
-			<!-- Portfolio Filter start-->
+			</div>
+		</div>
 
 
-			<!-- Portfolio Filter end -->
-
-		</div><!-- .contaier -->
 
 		<ul class="portfolio-items-container">
 
@@ -230,21 +243,16 @@
 
 	</section>
 
-	<!-- Google Map end -->
 
-	
-	<!-- Footer start -->
+			
 
+		
 
-
-	<!-- Footer end -->
-
-	<!-- Scroll-up -->
+		
 
 
-	
 
-	<!-- Javascript files -->
+
 
 	<script src="assets/js/jquery-1.11.1.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
