--- a/walle/Walle.html
+++ b/walle/Walle.html
@@ -521,7 +521,6 @@ function render() {
   </section>
 
   <!-- Portfolio end -->
-</div>
 
   <!-- Services start -->
 
@@ -538,23 +537,23 @@ function render() {
 
 
 
-	<script src="assets/js/jquery-1.11.1.min.js"></script>
-	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-	<script src="assets/js/jquery.magnific-popup.min.js"></script>
-	<script src="assets/js/imagesloaded.pkgd.js"></script>
-	<script src="assets/js/jquery.shuffle.min.js"></script>
-	<script src="assets/js/twitterFetcher_min.js"></script>
-	<script src="assets/js/owl.carousel.min.js"></script>
-	<script src="assets/js/jquery.fitvids.js"></script>
-	<script src="assets/js/jquery.sticky.js"></script>
+	<script src="../assets/js/jquery-1.11.1.min.js"></script>
+	<script src="../assets/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../assets/js/jquery.magnific-popup.min.js"></script>
+	<script src="../assets/js/imagesloaded.pkgd.js"></script>
+	<script src="../assets/js/jquery.shuffle.min.js"></script>
+	<script src="../assets/js/twitterFetcher_min.js"></script>
+	<script src="../assets/js/owl.carousel.min.js"></script>
+	<script src="../assets/js/jquery.fitvids.js"></script>
+	<script src="../assets/js/jquery.sticky.js"></script>
 	
 	<script src="assets/js/wow.min.js"></script>
 	<!-- Google Maps -->
 	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-	<script src="assets/js/gmaps.js"></script>
+	<script src="../assets/js/gmaps.js"></script>
 	<!-- Custom scripts -->
-	<script src="assets/js/custom.js"></script>
-	<script src="assets/js/custom-shuffle-init.js"></script>
+	<script src="../assets/js/custom.js"></script>
+	<script src="../assets/js/custom-shuffle-init.js"></script>
 
 </body>
 </html>
