--- a/ArcelikTransformer.html
+++ b/ArcelikTransformer.html
@@ -109,8 +109,14 @@
 		<div class="row">
 
 			<div class="col-sm-12">
-				<p>I worked on this project as a part of the Designing Interactions class at Comparative Media Studies department at MIT. The class was sponsored by Arcelik, a Turkey-based household appliances manufacturer. In a team of 3, we conducted research on exciting trends in retail, as well as customers’ pains and desires. Using the findings from our research and interviews, we designed an experience allowing customers to interact with products in fun and interactive ways 
-in a flexible and portable space that would host various events based on the company’s product line. We prototyped and demoed our concept to our peers and sponsors on a weekly basis. </p>
+
+<p> <b>My role:</b> conducting research on disruptive retail trends, interviewing millennials, contributing to concept definition and development, designing journey maps, implementing the front-end of one of the prototypes, presenting on team's on-going progress, and demoing the prototypes.
+				</p>
+
+
+<p>I worked on this project as a part of the Designing Interactions class at <a href="http://cmsw.mit.edu/" target="_blank">Comparative Media Studies department</a> at MIT. The class was sponsored by <a href="http://www.arcelik.com.tr/" target="_blank">Arcelik</a>, a Turkey-based household appliances manufacturer. We were an interdisciplinary team of three people (me - designer, Nic Lee - architect, Anubhav Jain - developer).</p>
+
+<p>Togther, we conducted research on exciting trends in retail, as well as customers’ pains and desires. Using the findings from our research and interviews, we designed an experience allowing customers to interact with products in fun and interactive ways in a flexible and portable space that would host various events based on the company’s product line. We prototyped and demoed our concept to our peers and sponsors on a weekly basis. </p>
 
 
 
@@ -504,7 +510,6 @@ in a flexible and portable space that would host various events based on the com
 		</div>
 
 
-
 		<ul class="portfolio-items-container">
 
 			
@@ -615,6 +620,7 @@ in a flexible and portable space that would host various events based on the com
 		<div id="map"></div>
 
 	</section>
+
 
 
 
