--- a/BlockedOnline.html
+++ b/BlockedOnline.html
@@ -116,9 +116,11 @@
 
 			<div class="col-sm-12">
 
-<p> I worked on this independent project with Kiarash Adl under the supervision of Tim Berners-Lee.</p>
+	<p> <b>My role:</b> designing the website at <a href="http://blockedonline.com/" target="_blank">www.blockedonline.com</a>, iterating from wireframes to pixel-perfect mockups, designing a logo and a system of icons, and articulating the designs to the developer.
+				</p>
 
-</p>We collaborated closely to develop the concept and the vision behind the project. My personal contributions included designing the website at <a href="http://blockedonline.com/" target="_blank">www.blockedonline.com</a> iterating from wireframes to pixel-perfect mockups, designing a system of icons and a logo, and working with the developer to ensure accurate design implementation.</p>
+<p> I worked on this independent project with Kiarash Adl under the supervision of Tim Berners-Lee. We collaborated closely to develop the concept and the vision behind the project.</p>
+
 
 <div class="popup-header">
 <h3 class="popup-title">Problem</h3>
