--- a/Brainstorming.html
+++ b/Brainstorming.html
@@ -101,7 +101,11 @@
 					<div class="popup-line"></div>
 				</div>
 
-				<p>During one of my semesters at <a href "http://mobile.mit.edu/">Mobile Experience Lab</a> at MIT, I organized brainstorming sessions for the lab members, as well as for outside clients such as <a href="http://www.generalsensing.com/#home-3">General Sensing</a> and <a href="http://www.jaguarusa.com/index.html">Jaguar</a>. I worked on creating an environment that is conducive to a productive ideation process by helping the participants engage in discussion, and get inspired by their surroundings and each other. I also designed complementary materials that informed the ideation process and helped bring all participants to the same page.</p>
+
+<p> <b>My role:</b> planning and facilitating brainstorming sessions, designing value maps, presentation templates, and brainstorming cards, documenting the results of brainstorming sessions in comprehensive reports.
+				</p>
+
+				<p>During one of my semesters at <a href "http://mobile.mit.edu/">Mobile Experience Lab</a> at MIT, I organized brainstorming sessions for the lab members, as well as for outside clients such as <a href="http://www.generalsensing.com/#home-3">General Sensing</a> and <a href="http://www.jaguarusa.com/index.html">Jaguar</a>. I worked on creating an environment that is conducive to a productive ideation process by helping the participants engage in discussion, and get inspired by their surroundings and each other.</p>
 
 				<p>One type of material that we designed individually for various clients, is a value map. The purpose of this template is to 
 				help participants focus on the customer during the ideation process and document their ideas in a comprehensive readable form:
@@ -126,11 +130,11 @@
 		</div><!-- .col -->
 	</div>
 
-<div class ="popup-content2">
+<div class ="popup-content">
 <div class="row">
 <div class="col-sm-12">
 <p>
-	After the participants are done brainstorming, they can use this presentation template to document a particular idea into a comprehensive report to be used during the presentation:
+	After the participants are done brainstorming, they can use this presentation template to document a particular idea and use it for presentation after the ideation process is finished:
 </p>
 </div>
 </div>
@@ -146,7 +150,7 @@
 		</div><!-- .col -->
 	</div>
 
-	<div class ="popup-content2">
+	<div class ="popup-content">
 <div class="row">
 <div class="col-sm-12">
 <p>
