--- a/StudySpot.html
+++ b/StudySpot.html
@@ -72,12 +72,14 @@
 		<div class="row">
 
 			<div class="col-sm-12">
+
+
+					<p> <b>My role:</b> developing the vision behind the application, contributing to the design ideas, creating the wireframes, preparing materials and tasks for user testing, and implementating the front-end of the application.
+				</p>
+
 				<p>I worked on this application with Amanda Foun and Kai Jordan. 
 				</p>
-				<p>
-					My role in the project included developing the vision behind the application,
-						contributing to the design ideas, creating the wireframes, preparing materials and tasks for user testing, and implementating the front-end of the application.
-				</p>
+				
 				<div class="popup-header">
 					<h3 class="popup-title">Problem</h3>
 				</div>
