--- a/VRresearch.html
+++ b/VRresearch.html
@@ -125,11 +125,15 @@ $('.slider').sss();
 
 			<div class="col-sm-12">
 
+				<p> <b>My role:</b> conducting research on precedent projects and technologies, designing application wireframes exemplifying the hierarchy of menus and key interactions within the application, implementing the UI of the prototype in Unity 3D, directing pilot studies and documenting results.
+				</p>
 
 				<p>I worked on this project at the <a href="http://mobile.mit.edu/" target="_blank">Mobile Experience Lab</a> at MIT in the role of a Research Assistant and a UX designer. The project was focused on exploring the potential of immersive virtual environments in the context of spatial design. Our research was aimed at understanding how people communicate with each other and interact with immersive interfaces. To achieve that, we designed and implemented a prototype that allows users to collaboratively design a layout using Oculus Rift and Leap Motion.</p>
-				<p>We identified key aspects of interaction within immersive virtual environments through pilot studies and user tests in different contexts. Our design yields to a variety of applications, focusing on the collaboration between a user and an expert, where expert can help the user solve spacial design tasks and make decisions in a shared virtual environment. The example use case explored in the project, is purchasing furniture and composing a room layout with the help of a design expert. As a result of our findings, we published a paper <a href="http://dl.acm.org/citation.cfm?id=2742034" target="_blank">nRoom: an immersive virtual environment for collaborative spatial design</a>.
+				<p>We identified key aspects of interaction within immersive virtual environments through pilot studies and user tests in different contexts. Our design yields to a variety of applications, focusing on the collaboration between a user and an expert, where expert can help the user solve spacial design tasks and make decisions in a shared virtual environment. As a result of our findings, we published a paper <a href="http://dl.acm.org/citation.cfm?id=2742034" target="_blank">nRoom: an immersive virtual environment for collaborative spatial design</a>.
 
 </p>
+
+<p>Image below illustrates two users interacting in a virtual environment:  </p>
 				
 			</div>
 
@@ -143,16 +147,41 @@ $('.slider').sss();
 
 			<!-- Put your image here -->
 
-			<img src="assets/images/interaction.png" alt="">
+			<img src="assets/images/vr/userInteraction.png" alt="">
 
 		</div><!-- .col -->
 	</div><!-- .row -->
+
 
 	<div class="popup-content">
 
 <div class="row">
 			<div class="col-sm-12">
-				<p>Click on the arrows to see some wireframes that give an idea of what the interaction looks like</p>				
+				<p>The view of the prototype UI through Oculus Rift:</p>				
+			</div>
+		</div>
+</div>
+
+	<div class="row">
+		<div class="col-sm-12 text-center">
+
+			<!-- Put your image here -->
+
+			<img src="assets/images/vr/prototypeUI.png" alt="">
+
+		</div><!-- .col -->
+	</div><!-- .row -->
+
+
+
+	<div class="popup-content">
+
+<div class="row">
+			<div class="col-sm-12">
+				<p>The example use case explored in the project, is purchasing furniture and composing a room layout with the help of a design expert. I designed the following wireframes for future prototype iterations. I researched various trends in 3D interfaces and explored the use of layers communicate the menu hierarchy and make it easy for the user to orient themselves in the menu while searching for an item.
+</p>
+
+				<p>Click on the arrows to see some wireframes that give an idea of what the interaction looks like.</p>				
 			</div>
 		</div>
 </div>
@@ -175,37 +204,6 @@ $('.slider').sss();
 
 </div>
 </div>
-
-
-
-	<div class="popup-content">
-<div class="row">
-			<div class="col-sm-12">
-				<h4>Things I did</h4>
-					<ul>
-						<li>Conducted research on precedent virtual reality projects and technologies
-	Designed user personas and user journeys</li>
-	<li>Designed wireframes exemplifying the hierarchy of menus and key interactions within the application
-		</li>
-	<li>Implemented parts of the application UI in Unity
-	</li>
-	<li>
-	Collaborated closely with other lab members to design pilot studies and interview questions
-	</li>
-	<li>
-		Facilitated user testing sessions, observed and documented users’ behaviours and reactions
-		</li>
-		<li>
-	Conducted literature review on immersive environment interactions and remote collaboration
-		</li>
-
-					</ul>
-
-									
-				</div>
-			</div>
-		</div>
-
 
 
 </div>
