--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 						<li><a href="AboutMe.html">ABOUT ME</a></li>
 	
 						<li><a href="Resume.html">RESUME</a></li>
-					</ul>
+
+											</ul>
 				</div>
 
 			</div><!-- .container -->
@@ -217,6 +218,17 @@
 
 	<!-- Services start -->
 
+
+<div class="popup-content5">
+		<div class="row">
+		<div class="col-sm-12 text-center">
+
+<div class="btn-list">
+<a href="mailto:ayakhina@wellesley.edu" class="btn btn-custom-4">ayakhina@wellesley.edu</a>. </div>
+
+</div>
+</div>
+</div>
 
 
 
