--- a/AboutMe.html
+++ b/AboutMe.html
@@ -83,8 +83,17 @@
 
 
 
-		
+			<div class="row">
+		<div class="col-sm-12 text-center">
+
+			<!-- Put your image here -->
+
+			<img src="prof.jpg" alt="">
+
+		</div><!-- .col -->
+	</div><!-- .row -->
 						
+						<div class ="popup-content">
 							<div class="row">
 
 					<div class="col-sm-12" text = "center">
@@ -104,18 +113,8 @@
 							I believe that design is the art of storytelling and usability. A good story comes from pure creative effort. Usability is achieved through extensive testing. I personally worship both of these design stages and consider them critically important in any project.
 						</div>
 
-
-
-		<div class="row">
-		<div class="col-sm-12 text-center">
-
-			<!-- Put your image here -->
-
-			<img src="prof.jpg" alt="">
-
-		</div><!-- .col -->
-	</div><!-- .row -->
 						</div>
+					</div>
 
 
 
