--- a/Resume.html
+++ b/Resume.html
@@ -102,9 +102,122 @@
 		</div>
 		</div>
 
+			<div class="row">
+
+			<div class="col-sm-12">
+
+				<div class="popup-headerWork">
+					<h2 class="popup-title">My Work</h2>
+				</div>
+			</div>
+		</div>
 
 
 
+		<ul class="portfolio-items-container">
+
+			
+
+	<li class="portfolio-item" data-groups="all slideshow">
+				<figure>
+					<img src="assets/images/studySpot/studySpotTile.png" alt="">
+					<figcaption>
+						<a href="StudySpot.html"></a>
+						<div class="caption-inner">
+							<h3 class="portfolio-item-title">iPhone App Design + Development </h3>
+							<div class="portfolio-item-desc">Helping students find their perfect study spot</div>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
+
+			<li class="portfolio-item" data-groups="all video">
+				<figure>
+					<img src="assets/images/arcelik/istiklalTile.png" alt="">
+					<figcaption>
+						<a href="ArcelikTransformer.html"></a>
+						<div class="caption-inner">
+							<h3 class="portfolio-item-title">Experience Design</h3>
+							<div class="portfolio-item-desc">Rethinking retail experience for millennials</div>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
+
+			
+
+			<li class="portfolio-item" data-groups="all video">
+				<figure>
+					<img src="assets/images/blockedOnline/blockedOnlineTile-01.png" alt="">
+					<figcaption>
+						<a href="BlockedOnline.html"></a>
+						<div class="caption-inner">
+							<h3 class="portfolio-item-title">Web Design</h3>
+							<div class="portfolio-item-desc">Blocked Online: Unveiling internet censorship</div>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
+
+			<li class="portfolio-item" data-groups="all image">
+				<figure>
+					<img src="assets/images/VRtile.jpg" alt="">
+					<figcaption>
+						<a href="VRresearch.html"></a>
+						
+						<div class="caption-inner">
+							<h3 class="portfolio-item-title">VR Research</h3>
+							<div class="portfolio-item-desc">Exploring collaborative spatial design <br>in a virtual environment</div>
+						
+					</a>
+					</figcaption>
+				</figure>
+			</li>
+
+			<li class="portfolio-item" data-groups="all slideshow">
+				<figure>
+					<img src="assets/images/brainstorming/brainst.png" alt="">
+					<figcaption>
+						<a href="Brainstorming.html"></a>
+						<div class="caption-inner">
+							<h3 class="portfolio-item-title">Brainstorm Facilitation</h3>
+							<div class="portfolio-item-desc">Using design thinking principles<br>
+								to lead creative ideation meetings</div>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
+
+		
+
+			<li class="portfolio-item" data-groups="all image">
+				<figure>
+					<img src="assets/images/walle/wallEcolver.png" alt="">
+					<figcaption>
+						<a href="walle/Walle.html"></a>
+						<div class="caption-inner">
+							<h3 class="portfolio-item-title">3D Modelling</h3>
+							<div class="portfolio-item-desc">Recreating Wall-E in Three.js</div>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
+
+		</ul><!-- .projects-container -->
+
+	</section>
+
+
+
+<!-- Google Map start-->
+	<div id="footerType">
+	</div>
+
+	<section id="map-section">
+
+		<div id="map"></div>
+
+	</section>
 
 
 
