--- a/walle/index.html
+++ b/walle/index.html
@@ -77,16 +77,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">ASIYA YAKHINA</a>
+          <a class="navbar-brand" href="../">ASIYA YAKHINA</a>
         </div>
 
         <div class="collapse navbar-collapse" id="custom-collapse">
           <ul class="nav navbar-nav navbar-right">
         
-            <li><a href="../index.html">PORTFOLIO</a></li>
-            <li><a href="../AboutMe.html">ABOUT ME</a></li>
+            <li><a href="../">PORTFOLIO</a></li>
+            <li><a href="../aboutme">ABOUT ME</a></li>
   
-            <li><a href="../Resume.html">RESUME</a></li>
+            <li><a href="../resume">RESUME</a></li>
           </ul>
         </div>
 
